monitoring/envoy-proxy-bouncer/environments/manifest.yaml
---
# Source: envoy-proxy-bouncer/charts/homelab-envoy-proxy-bouncer/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homelab-envoy-proxy-bouncer
  labels:
    helm.sh/chart: homelab-envoy-proxy-bouncer-0.4.2
    app.kubernetes.io/name: homelab-envoy-proxy-bouncer
    app.kubernetes.io/instance: envoy-proxy-bouncer
    app.kubernetes.io/version: "v0.4.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: grpc
      protocol: TCP
      name: grpc
    - port: 8081
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: homelab-envoy-proxy-bouncer
    app.kubernetes.io/instance: envoy-proxy-bouncer
---
# Source: envoy-proxy-bouncer/charts/homelab-envoy-proxy-bouncer/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-envoy-proxy-bouncer
  labels:
    helm.sh/chart: homelab-envoy-proxy-bouncer-0.4.2
    app.kubernetes.io/name: homelab-envoy-proxy-bouncer
    app.kubernetes.io/instance: envoy-proxy-bouncer
    app.kubernetes.io/version: "v0.4.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: homelab-envoy-proxy-bouncer
      app.kubernetes.io/instance: envoy-proxy-bouncer
  template:
    metadata:
      labels:
        helm.sh/chart: homelab-envoy-proxy-bouncer-0.4.2
        app.kubernetes.io/name: homelab-envoy-proxy-bouncer
        app.kubernetes.io/instance: envoy-proxy-bouncer
        app.kubernetes.io/version: "v0.4.2"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: homelab-envoy-proxy-bouncer
      securityContext:
        {}
      containers:
        - name: homelab-envoy-proxy-bouncer
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - all
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "ghcr.io/kdwils/envoy-proxy-bouncer:v0.4.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 8080
              protocol: TCP
            - name: http
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            grpc:
              port: 8080
              service: liveness
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            grpc:
              port: 8080
              service: readiness
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
---
# Source: envoy-proxy-bouncer/charts/homelab-envoy-proxy-bouncer/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homelab-envoy-proxy-bouncer
  labels:
    helm.sh/chart: homelab-envoy-proxy-bouncer-0.4.2
    app.kubernetes.io/name: homelab-envoy-proxy-bouncer
    app.kubernetes.io/instance: envoy-proxy-bouncer
    app.kubernetes.io/version: "v0.4.2"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "bouncer.kyledev.co"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /captcha
      backendRefs:
        - name: homelab-envoy-proxy-bouncer
          port: 8081
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homelab-envoy-proxy-bouncer
          port: 8080
---
# Source: envoy-proxy-bouncer/charts/homelab-envoy-proxy-bouncer/templates/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: homelab-envoy-proxy-bouncer
spec:
  from:
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: argocd
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: blog
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: bluesky
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: mealie
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: media
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: pocketid
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: vaultwarden
  to:
  - group: ""
    kind: Service
    name: homelab-envoy-proxy-bouncer
